<resources>
    <string name="app_name">DicodingApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="nama_user">Nama User</string>
    <string name="more">More menu</string>
    <string name="description">Description</string>
    <string name="edit_description">Edit Description</string>
    <string name="menu">menu</string>
    <string name="name_required_error">Nama tidak boleh kosong.</string>
    <string name="invalid_email_error">Alamat email tidak valid.</string>
    <string name="invalid_password_error">Kata sandi harus memiliki minimal 8 karakter.</string>
    <string name="email_required">Email tidak boleh kosong</string>
    <string name="password_required">Password tidak boleh kosong</string>
    <string name="invalid_input_error">Input tidak valid</string>
    <string name="user_image">user image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add Story</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="login_succes_dialog">Anda berhasil login. Sudah tidak sabar untuk belajar ya?</string>
    <string name="app_info">Yeah!</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="permission_denied">Izin ditolak</string>
    <string name="retry">Coba lagi</string>
    <string name="use_current_location">Gunakan lokasi saat ini</string>
    <string name="location">Lokasi</string>
</resources>