<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ed_add_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/user_image" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:backgroundTint="@color/navy"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/galleryButton"
            app:layout_constraintTop_toBottomOf="@id/ed_add_image"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:backgroundTint="@color/navy"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintStart_toEndOf="@id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_image"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="0dp"
            android:backgroundTint="@color/navy"
            android:layout_height="wrap_content"
            android:hint="@string/edit_description"
            android:inputType="textMultiLine"
            android:minHeight="250dp"
            android:background="@drawable/edit_text_background"
            android:gravity="top|start"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/galleryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/ed_location_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button_add"
            android:backgroundTint="@color/navy"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_location_checkbox"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
